Use Instant as DateTime type
Backport https://github.com/steve-community/steve/pull/1789